--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,4 +1,4 @@
 // Typo
 $font-family-main: 'Nanum Gothic', sans-serif;
 $font-family-headings: 'Nanum Gothic', sans-serif;
-$font-size: 1em;
+$font-size: 18px;
