--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -68,6 +68,14 @@ layout: default
     {% endif %}
   </article>
 
+    {%- if site.disqus_shortname -%}
+    <div class="comments">
+      {%- include blog_post_comments.html -%}
+    </div>
+    {%- endif -%}
+
+    <!-- <!-- Incomment incase you want to use Disqus -->
+      <div id="disqus_thread"></div>
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
